--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -3,14 +3,17 @@
   .main-container {
     min-height: 100%;
     transition: margin-left .28s;
-    margin-left: 180px;
+    /*margin-left: 180px;*/
+    margin-top: 60px;
     position: relative;
   }
   // 侧边栏
   .sidebar-container {
     transition: width 0.28s;
-    width: 180px !important;
-    height: 100%;
+    /*width: 180px !important;
+    height: 100%;*/
+    width: 100% !important;
+    height: 60px;
     position: fixed;
     font-size: 0px;
     top: 0;
@@ -46,6 +49,10 @@
       border: none;
       height: 100%;
       width: 100% !important;
+    }
+    .menu-wrapper {
+      float: left;
+      width: 180px;
     }
     .is-active > .el-submenu__title{
       color: #f4f4f5!important;
